Fixed some aligning

--- a/src/pages/Schedule/Schedule.css
+++ b/src/pages/Schedule/Schedule.css
@@ -18,8 +18,8 @@
   font-size: 24px;
 }
 
-.class-schedule h2,
-p {
+h2.class-schedule ,
+p.class-schedule {
   display: flex;
   align-items: center;
   justify-content: center;
